--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
+    "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "pg": "^8.14.0",
