--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
