--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.0",
@@ -31,11 +32,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "15.2.3",
     "next-themes": "^0.4.6",
     "pg": "^8.14.0",
     "react": "^19.0.0",
@@ -52,7 +54,7 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
     "tsx": "^4.19.3",
     "typescript": "^5"
