--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
+    "svix": "^1.64.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
