--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.479.0",
+    "motion": "^12.7.4",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "svix": "^1.64.1",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
