--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
-    "seed": "tsx src/db/seed.ts"
+    "seed": "tsx src/db/seed.ts",
+    "seedusers": "tsx src/app/scripts/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
+    "@faker-js/faker": "^9.7.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.4",
@@ -47,7 +49,8 @@
     "sonner": "^2.0.3",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
