--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.479.0",
     "motion": "^12.7.4",
     "next": "15.2.3",
@@ -46,6 +47,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sonner": "^2.0.3",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
@@ -55,6 +58,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
